# scrai-main

./: .env.example  .gitignore  create_db.py  docker-compose.yml  factory.py  firebase_readme.md  notes.md  readme.md
.idx/: dev.nix
backend/: back_end_connection.md  cloud_req.txt  main.py  pyproject.toml  requirements.txt
backend/scrai_core/: __init__.py
backend/scrai_core/agents/: cognition.py  memory.py  memory_consolidator.py  models.py  schemas.py
backend/scrai_core/core/: db_init.py  logging_config.py  persistence.py  simulation.py
backend/scrai_core/events/: bus.py  schemas.py
backend/scrai_core/scenarios/: loader.py
backend/scrai_core/world/: models.py  systems.py
backend/tests/: conftest.py  test_cognition.py  test_full_loop.py  test_heartbeat.py  test_interaction.py  test_llm_integration.py  test_memory_consolidation.py  test_rag_loop.py  test_reflection.py
docs/: changes.md  context7_reference.md  scrAI_blueprint.md  scrAI_structure.md
docs/phase_1/: memory_consolidator_design.md  stage_I.dev.md  todo_stage_1.md
docs/phase_2/: stage_II.dev.md
docs/phase_3/: stage_III.dev.md
docs/phase_4/: stage_IIII.dev.md
frontend/: devnotes.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.tsx  Log.tsx  MapComponent.tsx  Simulation.tsx
postgres-init/: 01_enable_pgvector.sql
