[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for scrAI simulation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrai_core"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
structlog = "^25.4.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
langchain-core = "*" # Changed to allow any version
langchain-community = "*" # Changed to allow any version
# sentence-transformers = "^2.7.0"
# torch = ">=2.0.0" # Generic torch, will specify CPU on export
pgvector = "^0.2.0" # Assuming you're using this directly with SQLAlchemy
prometheus-fastapi-instrumentator = { version = "^6.1.0", python = ">=3.12,<4.0.0" }
httpx = "^0.28.0"
anyio = "^4.0.0" # Required by FastAPI
h11 = "^0.14.0" # Required by Uvicorn
greenlet = "^3.0.0" # Dependency for psycopg2 or SQLAlchemy
tiktoken = "^0.7.0"
# transformers = "^4.40.0"
numpy = "^2.0.0"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
# accelerate = "^0.30.0" # Often used with Hugging Face transformers
protobuf = "^5.0.0"
grpcio = "^1.64.0"
grpcio-status = "^1.64.0"
# google-generativeai = "^0.9.0" # Temporarily commented out for dependency resolution
# openai = "^1.35.0" # Temporarily commented out for dependency resolution
orjson = "^3.10.0" # Faster JSON serialization for FastAPI
msgpack = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0" # For linting and formatting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
